@@ -1,0 +1,34 @@
+# Require CMake 2.8
+cmake_minimum_required(VERSION 2.8)
+
+project(unitcube-bench)
+
+# Set verbose output while testing CMake
+#set(CMAKE_VERBOSE_MAKEFILE 1)
+
+# Set CMake behavior
+cmake_policy(SET CMP0004 OLD)
+
+# Get DOLFIN configuration data (dolfin-config.cmake must be in DOLFIN_CMAKE_CONFIG_PATH)
+find_package(dolfin)
+
+# Default build type (can be overridden by user)
+if (NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING
+    "Choose the type of build, options are: Debug MinSizeRel Release RelWithDebInfo." FORCE)
+endif()
+
+# Compiler definitions
+add_definitions(${DOLFIN_CXX_DEFINITIONS})
+
+# Add special DOLFIN compiler flags
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DOLFIN_CXX_FLAGS}")
+
+# Include directories
+include_directories(${DOLFIN_INCLUDE_DIRS} ${DOLFIN_3RD_PARTY_INCLUDE_DIRS})
+
+# Executable
+add_executable(unitcube-bench main.cpp)
+
+# Target libraries
+target_link_libraries(unitcube-bench ${DOLFIN_LIBRARIES} ${DOLFIN_3RD_PARTY_LIBRARIES})
